<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EmailTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="email">HI! Want to send some e-mail?</string>
    <string name="send">Send E-mail</string>
    <string name="content">Content</string>
    <string name="subject">Subject</string>
    <string name="address">E-mail Address</string>

</resources>